--- a/config.json
+++ b/config.json
@@ -1,9 +1,145 @@
-{
-  "Database":"sqlite",
-  "MysqlHost":"localhost",
-  "MysqlUser":"root",
-  "MysqlPass":"pass",
-  "MysqlDB":"arkdb",
-  "MysqlPort":3306,
-  "DbPathOverride":""
+{  
+   "Mutes":{  
+      "Messages":[  
+         "Muted For: {} hours, {} minutes.",
+         "Muted For: {} seconds.",
+         "Muted For: {} Minutes for saying {}.",
+		 "Banned For: {} hours, {} minutes.",
+         "Banned For: {} seconds."
+      ],
+      "BlackList":[  
+         {  
+            "Word":"juden",
+            "Minutes":5
+         },		 
+         {  
+            "Word":"fick",
+            "Minutes":5
+         },
+		 {  
+            "Word":"f icker",
+            "Minutes":5
+         },
+         {  
+            "Word":"missgeburt",
+            "Minutes":5
+         },		 
+         {  
+            "Word":"fresse",
+            "Minutes":5
+         },		 
+		 {  
+            "Word":"jude",
+            "Minutes":5
+         },
+         {  
+            "Word":"arsehole",
+            "Minutes":5
+         },
+		 {  
+            "Word":"cheater",
+            "Minutes":5
+         },
+         {  
+            "Word":"schwarzkopf",
+            "Minutes":5
+         },
+		  {  
+            "Word":"hure",
+            "Minutes":5
+         },
+		  {  
+            "Word":"hurensohn",
+            "Minutes":5
+         },
+		 {  
+            "Word":"nigger",
+            "Minutes":5
+         },
+		  {  
+            "Word":"huso",
+            "Minutes":5
+         },
+		  {  
+            "Word":"idiot",
+            "Minutes":5
+         },
+		  {  
+            "Word":"ficker",
+            "Minutes":5
+         },
+         {  
+            "Word":"vagina",
+            "Minutes":5
+         },
+         {  
+            "Word":"penis",
+            "Minutes":5
+         },
+         {  
+            "Word":"nigg",
+            "Minutes":5
+         },
+         {  
+            "Word":"nigger",
+            "Minutes":5
+         },
+         {  
+            "Word":"nigga",
+            "Minutes":5
+         },
+         {  
+            "Word":"negro",
+            "Minutes":5
+         },
+         {  
+            "Word":"prostitute",
+            "Minutes":5
+         },
+         {  
+            "Word":"fuck",
+            "Minutes":5
+         },
+         {  
+            "Word":"bastard",
+            "Minutes":5
+         },
+         {  
+            "Word":"prick",
+            "Minutes":5
+         },
+         {  
+            "Word":"dildo",
+            "Minutes":5
+         },
+         {  
+            "Word":"Nazi",
+            "Minutes":5
+         },
+		 {  
+            "Word":"nazi",
+            "Minutes":5
+         },
+		 {  
+            "Word":"hitler",
+            "Minutes":5
+         },
+		 {  
+            "Word":"Hitler",
+            "Minutes":5
+         },
+         {  
+            "Word":"jizz",
+            "Minutes":5
+         },
+         {  
+            "Word":"pedo",
+            "Minutes":5
+         },
+         {  
+            "Word":"peado",
+            "Minutes":5
+         }
+      ]
+   }
 }
