--- a/config.json
+++ b/config.json
@@ -1,145 +1,59 @@
-{  
-   "Mutes":{  
-      "Messages":[  
-         "Muted For: {} hours, {} minutes.",
-         "Muted For: {} seconds.",
-         "Muted For: {} Minutes for saying {}.",
-		 "Banned For: {} hours, {} minutes.",
-         "Banned For: {} seconds."
-      ],
-      "BlackList":[  
-         {  
-            "Word":"juden",
-            "Minutes":5
-         },		 
-         {  
-            "Word":"fick",
-            "Minutes":5
-         },
-		 {  
-            "Word":"f icker",
-            "Minutes":5
-         },
-         {  
-            "Word":"missgeburt",
-            "Minutes":5
-         },		 
-         {  
-            "Word":"fresse",
-            "Minutes":5
-         },		 
-		 {  
-            "Word":"jude",
-            "Minutes":5
-         },
-         {  
-            "Word":"arsehole",
-            "Minutes":5
-         },
-		 {  
-            "Word":"cheater",
-            "Minutes":5
-         },
-         {  
-            "Word":"schwarzkopf",
-            "Minutes":5
-         },
-		  {  
-            "Word":"hure",
-            "Minutes":5
-         },
-		  {  
-            "Word":"hurensohn",
-            "Minutes":5
-         },
-		 {  
-            "Word":"nigger",
-            "Minutes":5
-         },
-		  {  
-            "Word":"huso",
-            "Minutes":5
-         },
-		  {  
-            "Word":"idiot",
-            "Minutes":5
-         },
-		  {  
-            "Word":"ficker",
-            "Minutes":5
-         },
-         {  
-            "Word":"vagina",
-            "Minutes":5
-         },
-         {  
-            "Word":"penis",
-            "Minutes":5
-         },
-         {  
-            "Word":"nigg",
-            "Minutes":5
-         },
-         {  
-            "Word":"nigger",
-            "Minutes":5
-         },
-         {  
-            "Word":"nigga",
-            "Minutes":5
-         },
-         {  
-            "Word":"negro",
-            "Minutes":5
-         },
-         {  
-            "Word":"prostitute",
-            "Minutes":5
-         },
-         {  
-            "Word":"fuck",
-            "Minutes":5
-         },
-         {  
-            "Word":"bastard",
-            "Minutes":5
-         },
-         {  
-            "Word":"prick",
-            "Minutes":5
-         },
-         {  
-            "Word":"dildo",
-            "Minutes":5
-         },
-         {  
-            "Word":"Nazi",
-            "Minutes":5
-         },
-		 {  
-            "Word":"nazi",
-            "Minutes":5
-         },
-		 {  
-            "Word":"hitler",
-            "Minutes":5
-         },
-		 {  
-            "Word":"Hitler",
-            "Minutes":5
-         },
-         {  
-            "Word":"jizz",
-            "Minutes":5
-         },
-         {  
-            "Word":"pedo",
-            "Minutes":5
-         },
-         {  
-            "Word":"peado",
-            "Minutes":5
-         }
-      ]
-   }
+{
+  "General": {
+    "DbPathOverride": "",
+    "PlayerUpdateIntervalInMins": 10,
+    "IgnoreAdmins": true,
+    "AllowNewPlayersToDamageEnemyStructures": false,
+    "AllowPlayersToDisableOwnedTribeProtection": true,
+    "AllowWildCorruptedDinoDamage": true,
+    "AllowWildDinoDamage": false,
+    "NPPPlayerDecayInHours": 384,
+    "NPPCommandPrefix": "!",
+    "NPPAdminGroup": "NPPAdmin",  
+
+    "NewPlayerDoingDamageMessage": "You can't attack structures while under New Player Protection!",
+    "NewPlayerStructureTakingDamageMessage": "You can't attack structures that are under New Player Protection!",
+    "NewPlayerStructureTakingDamageFromUnknownTribemateMessage": "Your tribe can't attack structures that are under New Player Protection!",
+
+    "NPPRemainingMessage": "New Player Protection Remaining: {} Day(s) {} Hour(s) {} Minute(s) OR {} level(s)! [Based on oldest/highest tribe member]",
+    "NPPInfoMessage": "NPP Server Settings: Hours of Protection: {}, Max New Player Level: {}.",
+    "NPPInvalidCommand": "Invalid chat command!",
+    "NewPlayerProtectionDisableSuccess": "Your tribes protection has been disabled!",
+    "NotANewPlayerMessage": "Your tribe is not under New Player Protection!",
+    "NotTribeAdminMessage": "You are not a tribe admin!",
+    "TribeIDText": "Target structure's Tribe ID: {}.",
+    "NoStructureForTribeIDText": "Please face the middle of your screen towards the structure you want to retrieve the Tribe ID from.",
+    "PVEDisablePlayerMessage": "PVE player can not disable their own protection",
+    "PVEStatusMessage": "Your tribe is a PVE tribe",
+    "NotAStructureMessage": "This target is not a structure!",
+
+    "AdminNoTribeExistsMessage": "No tribe with that ID exists; Tribe: {}",
+    "AdminTribeProtectionRemoved": "Protection has been removed for Tribe: {}",
+    "AdminTribeNotUnderProtection": "No protection to remove from Tribe: {}",
+    "AdminResetTribeProtectionSuccess": "{} hour(s) of protection from now has been given to Tribe: {}",
+    "AdminResetTribeProtectionLvlFailure": "A player is over the NPP Max Level. Cannot give protection to Tribe: {}",
+    "AdminPVETribeAddedSuccessMessage": "Successfully added to PVE Tribes: {}",
+    "AdminPVETribeAlreadyAddedMessage": "Tribe was already added to PVE Tribes: {}",
+    "AdminPVETribeRemovedSuccessMessage": "Successfully removed from PVE Tribes: {}",
+    "AdminPVETribeAlreadyRemovedMessage": "Tribe was already removed from PVE Tribes: {}",
+
+    "MessageIntervalInSecs": 10,
+    "MessageTextSize": 1.4,
+    "MessageDisplayDelay": 10,
+    "MessageColor": [
+      1.0,
+      0.0,
+      0.0,
+      0.0
+    ],
+
+    "NewPlayerProtection": {
+      "NewPlayerMaxLevel": 60,
+      "HoursOfProtection": 72
+    },
+
+    "StructureExemptions": [
+     
+    ]
+  }
 }
